# ML_Ops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Snakefile  comparison_versions.md  docker-compose-clearml.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml
data/: .gitignore  comparison_of_revisions.txt  input.dvc  models.dvc  output.dvc  spec_ds.dvc  сomparison_of_revisions.txt
rules/: postprocessing.smk
src/: main.py
src/ml_ops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/preparation/: check.py  make_specrogram.py  prepare.py  prepare_cli.py  prepare_snakemake.py  utils.py
src/train/: callbaks.py  config.py  make_specrogram.py  model.py  train.py  utils.py
src/validation/: clearml_task_api.py  utils.py  validation.py
src/validation/classes/: __init__.py  one_class_result.py  revision_result.py
src/visualisation/: show_spec.py  utils.py
static/: report.html
