[project]
name = "ml-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.0"
authors = [
    {name = "Anastasiia Ostapchuk", email = "kisaost777@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

[project.scripts]
api = "main:main"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
