[project]
name = "ml-ops"
version = "0.1.0"
description = "ML Ops homeworks"
readme = "README.md"
requires-python = ">=3.10.0"
authors = [
    {name = "Anastasiia Ostapchuk", email = "kisaost777@gmail.com"},                                                   
]
dependencies = [
    "dvc>=3.60.1",
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "pydub>=0.25.1",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "black>=25.1.0",
    "build>=1.2.2",
    "twine>=6.1.0",
    "pre-commit>=4.2.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[project.scripts]
api = "main:main"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
module = ["pydub.*"]
follow_untyped_imports = true
