[project]
name = "ml-ops"
version = "0.1.0"
description = "ML Ops homeworks"
readme = "README.md"
requires-python = ">=3.12.10"
authors = [
    {name = "Anastasiia Ostapchuk", email = "kisaost777@gmail.com"},                                                   
]
dependencies = [
    "dvc>=3.60.1",
    "dvc-webdav>=3.0.0",
    "fastapi>=0.115.13",
    "matplotlib>=3.10.3",
    "neptune>=1.14.0",
    "neptune-tensorflow-keras>=2.2.2",
    "numpy==2.1.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "scipy-stubs>=1.16.0.0",
    "seaborn>=0.13.2",
    "snakemake>=9.6.2",
    "snakemake-storage-plugin-webdav>=0.1.2",
    "soundfile>=0.13.1",
    "tensorflow[and-cuda]>=2.19.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "black>=25.1.0",
    "build>=1.2.2",
    "twine>=6.1.0",
    "pre-commit>=4.2.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "types-tensorflow>=2.18.0.20250516",
]

[project.scripts]
api = "main:main"
prepare = "preparation.prepare:main"
train = "train.train:main"
make_spec = "preparation.make_specrogram:main"
validate = "validation.validation:main"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
module = ["pydub.*"]
follow_untyped_imports = true
